--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <title>Simple Video Chat</title>
@@ -10,41 +9,34 @@
             margin: 10px;
             border: 2px solid #444;
         }
-
         #buttons {
             margin: 20px;
         }
     </style>
 </head>
-
 <body>
     <h2>Firebase Video Chat</h2>
-
     <div>
         <video id="localVideo" autoplay playsinline muted></video>
         <video id="remoteVideo" autoplay playsinline></video>
     </div>
-
     <div id="buttons">
         <input id="roomId" placeholder="Room ID" />
         <button onclick="createRoom()">Create Room</button>
         <button onclick="joinRoom()">Join Room</button>
     </div>
-
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
-
     <script>
-        // === Replace with your own config ===
         const firebaseConfig = {
-                apiKey: "AIzaSyD1Rfc3o_KYoShnOTMA4pGPxuPW2q2NSFQ",
-                authDomain: "video-3e0bd.firebaseapp.com",
-                projectId: "video-3e0bd",
-                storageBucket: "video-3e0bd.firebasestorage.app",
-                messagingSenderId: "521178909590",
-                appId: "1:521178909590:web:5cf157ff214b70e4106bb7"
-            };
+            apiKey: "AIzaSyD1Rfc3o_KYoShnOTMA4pGPxuPW2q2NSFQ",
+            authDomain: "video-3e0bd.firebaseapp.com",
+            projectId: "video-3e0bd",
+            storageBucket: "video-3e0bd.appspot.com",
+            messagingSenderId: "521178909590",
+            appId: "1:521178909590:web:5cf157ff214b70e4106bb7"
+        };
         firebase.initializeApp(firebaseConfig);
         const db = firebase.database();
 
@@ -56,14 +48,19 @@
             iceServers: [{ urls: "stun:stun.l.google.com:19302" }]
         });
 
+        const iceCandidates = [];
+        let remoteSet = false;
+
         navigator.mediaDevices.getUserMedia({ video: true, audio: true })
             .then(stream => {
                 localVideo.srcObject = stream;
                 stream.getTracks().forEach(track => peer.addTrack(track, stream));
             });
 
-        peer.ontrack = e => {
-            remoteVideo.srcObject = e.streams[0];
+        peer.ontrack = event => {
+            if (event.streams && event.streams[0]) {
+                remoteVideo.srcObject = event.streams[0];
+            }
         };
 
         peer.onicecandidate = e => {
@@ -83,15 +80,17 @@
                 if (snapshot.val() && !peer.remoteDescription) {
                     const answer = JSON.parse(snapshot.val());
                     await peer.setRemoteDescription(answer);
+                    remoteSet = true;
+                    processIceCandidates(roomId);
                 }
             });
 
             db.ref(`${roomId}/ice`).on("child_added", async snapshot => {
                 const candidate = JSON.parse(snapshot.val());
-                if (candidate) {
-                    try {
-                        await peer.addIceCandidate(candidate);
-                    } catch (e) { }
+                if (remoteSet) {
+                    await peer.addIceCandidate(candidate);
+                } else {
+                    iceCandidates.push(candidate);
                 }
             });
         }
@@ -101,6 +100,7 @@
             const snapshot = await db.ref(`${roomId}/offer`).once("value");
             const offer = JSON.parse(snapshot.val());
             await peer.setRemoteDescription(offer);
+            remoteSet = true;
 
             const answer = await peer.createAnswer();
             await peer.setLocalDescription(answer);
@@ -108,14 +108,20 @@
 
             db.ref(`${roomId}/ice`).on("child_added", async snapshot => {
                 const candidate = JSON.parse(snapshot.val());
-                if (candidate) {
-                    try {
-                        await peer.addIceCandidate(candidate);
-                    } catch (e) { }
+                if (peer.remoteDescription) {
+                    await peer.addIceCandidate(candidate);
+                } else {
+                    iceCandidates.push(candidate);
                 }
             });
         }
+
+        function processIceCandidates(roomId) {
+            iceCandidates.forEach(async candidate => {
+                await peer.addIceCandidate(candidate);
+            });
+            iceCandidates.length = 0;
+        }
     </script>
 </body>
-
 </html>
