--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8">
     <title>Односторонний стрим камеры</title>
@@ -25,7 +24,6 @@
         }
     </style>
 </head>
-
 <body>
     <h2>Односторонний стрим камеры 📷</h2>
 
@@ -40,14 +38,16 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
 
     <script>
-       const firebaseConfig = {
+        const firebaseConfig = {
             apiKey: "AIzaSyD1Rfc3o_KYoShnOTMA4pGPxuPW2q2NSFQ",
             authDomain: "video-3e0bd.firebaseapp.com",
             projectId: "video-3e0bd",
             storageBucket: "video-3e0bd.appspot.com",
             messagingSenderId: "521178909590",
-            appId: "1:521178909590:web:5cf157ff214b70e4106bb7"
+            appId: "1:521178909590:web:5cf157ff214b70e4106bb7",
+            databaseURL: "https://video-3e0bd-default-rtdb.firebaseio.com" // ОБЯЗАТЕЛЬНО!
         };
+
         firebase.initializeApp(firebaseConfig);
         const db = firebase.database();
 
@@ -64,39 +64,36 @@
 
         peer.onicecandidate = e => {
             if (e.candidate) {
-                const roomId = roomIdInput.value;
+                const roomId = roomIdInput.value.trim();
                 db.ref(`${roomId}/ice`).push(JSON.stringify(e.candidate));
             }
         };
 
         async function startStream() {
-  const roomId = roomIdInput.value.trim();
-  const stream = await navigator.mediaDevices.getUserMedia({ video: true, audio: false });
-  remoteVideo.srcObject = stream; // <-- Показывает камеру на телефоне
-  stream.getTracks().forEach(track => peer.addTrack(track, stream));
+            const roomId = roomIdInput.value.trim();
+            const stream = await navigator.mediaDevices.getUserMedia({ video: true, audio: false });
 
-  const offer = await peer.createOffer();
-  await peer.setLocalDescription(offer);
-  await db.ref(`${roomId}/offer`).set(JSON.stringify(offer));
+            // Показываем видео сразу на телефоне
+            remoteVideo.srcObject = stream;
 
-  db.ref(`${roomId}/answer`).on("value", async snapshot => {
-    const val = snapshot.val();
-    if (val && !peer.remoteDescription) {
-      const answer = JSON.parse(val);
-      await peer.setRemoteDescription(answer);
-    }
-  });
+            // Отправляем в peer
+            stream.getTracks().forEach(track => peer.addTrack(track, stream));
 
-  db.ref(`${roomId}/ice`).on("child_added", async snapshot => {
-    const candidate = JSON.parse(snapshot.val());
-    if (candidate) await peer.addIceCandidate(candidate).catch(()=>{});
-  });
-}
+            const offer = await peer.createOffer();
+            await peer.setLocalDescription(offer);
+            await db.ref(`${roomId}/offer`).set(JSON.stringify(offer));
 
+            db.ref(`${roomId}/answer`).on("value", async snapshot => {
+                const val = snapshot.val();
+                if (val && !peer.remoteDescription) {
+                    const answer = JSON.parse(val);
+                    await peer.setRemoteDescription(answer);
+                }
+            });
 
             db.ref(`${roomId}/ice`).on("child_added", async snapshot => {
                 const candidate = JSON.parse(snapshot.val());
-                if (candidate) await peer.addIceCandidate(candidate).catch(() => { });
+                if (candidate) await peer.addIceCandidate(candidate).catch(() => {});
             });
         }
 
@@ -110,8 +107,11 @@
             await peer.setLocalDescription(answer);
             await db.ref(`${roomId}/answer`).set(JSON.stringify(answer));
 
+            db.ref(`${roomId}/ice`).on("child_added", async snapshot => {
+                const candidate = JSON.parse(snapshot.val());
+                if (candidate) await peer.addIceCandidate(candidate).catch(() => {});
+            });
         }
     </script>
 </body>
-
 </html>
